--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,24 +35,23 @@ body {
 }
 .container{
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
-    margin: 2em;
-    height: 25em;
+    margin-top: 2em;
+    height: 30em;
     flex-direction: column;
-    align-items: center;
 }
 .container-figure {
-    height: 30em;
+    margin-left: 20em;
+    height: 27em;
+    width: 10em;
     box-shadow: 10px 3px 5px rgb(0 0 0 / 10%), 0 10px 16px rgb(0 0 0 / 10%);;
 }
 .container-figure > img {
-    height: 25em;
+    height: 100%;
 
 }
 .form {
-    display: flex;
-    flex-direction: column;
+    margin-right: 0em;
     border: solid 2px lightgray;
     width: 20em;
     padding: 1em;
@@ -65,7 +64,7 @@ body {
 
 .form > input {
     border: 1px solid #dddfe2;
-    width: 100%;
+    width: 85%;
     padding: 0.8em;
     margin: 0.6em;
     color: #1d2129;
@@ -81,19 +80,19 @@ body {
     font-size: 20px;
     line-height: 48px;
     padding: 0 16px;
-    width: 99%;
+    width: 90%;
     cursor: pointer;
 }
 .form button:hover,button:focus {
     background-color: #1876f2c9;
 }
 .form2 {
-    display: flex;
-    flex-direction: column;
+    margin-top: 3em;
+    margin-left: 10em;
     border: solid 2px lightgray;
     width: 20em;
-    padding: 1em;
-    height: 15em;
+    padding: 3em;
+    height: 17em;
     align-items: center;
     border-radius: 0.4em;
     background-color: #fffffff3;
@@ -101,8 +100,8 @@ body {
 }
 .form2 > input {
     border: 1px solid #dddfe2;
-    width: 100%;
-    padding: 0.8em;
+    width: 85%;
+    padding: 1em;
     margin: 0.6em;
     color: #1d2129;
 
@@ -117,7 +116,7 @@ body {
     font-size: 20px;
     line-height: 48px;
     padding: 0 16px;
-    width: 99%;
+    width: 90%;
     cursor: pointer;
 }
 .form2 button:hover,button:focus {
